# car_sim

./: .gitignore
car_sim_description/urdf/: car_sim.urdf.xacro
car_sim_gazebo/: CMakeLists.txt  package.xml
car_sim_gazebo/launch/: car_sim_robot.launch.py  world.launch.py
car_sim_gazebo/mpc_lateral/: mpc.yaml  mpc_lateral.cpp  mpc_lateral_error_state.cpp  mpc_og.cpp
car_sim_gazebo/purepursuit/: pure_pursuit.py
car_sim_gazebo/route_finding/: add_point.py  csv_path_player.py  path_recorder.py
car_sim_gazebo/scripts/: csv_path_player.py  mud_blocks_markers.py  odom_tf_broadcaster.py  path_recorder.py  pure_pursuit.py
car_sim_gazebo/src/: jarbay_plugin.cpp
car_sim_gazebo/trajectory_viewer/: trajectory.py
